// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual snapshot — Input primitive (T-UI-415) > renders the Input primitive in primary + invalid states > invalid 1`] = `
<input
  aria-describedby="snap-input-error"
  aria-invalid="true"
  class="block w-full rounded-ui-md border border-ui-border bg-ui-bg px-ui-space-3 py-ui-space-2 text-ui-text-base text-ui-fg placeholder:text-ui-fg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed aria-[invalid=true]:border-ui-danger aria-[invalid=true]:ring-ui-danger"
  id="snap-input-invalid"
  placeholder="Amount"
  type="text"
/>
`;

exports[`visual snapshot — Input primitive (T-UI-415) > renders the Input primitive in primary + invalid states > primary 1`] = `
<input
  class="block w-full rounded-ui-md border border-ui-border bg-ui-bg px-ui-space-3 py-ui-space-2 text-ui-text-base text-ui-fg placeholder:text-ui-fg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed aria-[invalid=true]:border-ui-danger aria-[invalid=true]:ring-ui-danger"
  id="snap-input"
  placeholder="Amount"
  type="text"
/>
`;
